# adaptive-incentives-crowdsensing

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  main.py  requirements.txt  setup.cfg
.github/workflows/: ci.yml
data/: Germany_Bayern_Bamberg.points.geojson  Germany_Bayern_Bamberg.tracks.geojson
data/processed/: cleaned_bamberg_grid.geojson  grid_summary.csv
data/raw/: Germany_Bayern_Bamberg.areas.geojson  Germany_Bayern_Bamberg.points.geojson  Germany_Bayern_Bamberg.tracks.geojson
notebooks/: 01_preprocess_and_visualize.ipynb
output/: cleaned_bamberg_areas.geojson  grid_summary.csv
report/: experiment_log.md
scripts/: run_full_pipeline.sh
src/: config.py  loader.py  preprocessing.py
src/noise_sim/: cli.py  config.py  preprocessing.py
src/simulation/: static_simulation.py
src/utils/: logging_config.py
