[metadata]
name = noise-sim
version = 0.1.0
description = NoisePlanet participatory crowd-sensing simulation toolkit
long_description = file: README.md
long_description_content_type = text/markdown
author = Bishwo Bijaya Shah
author_email = bishwo-bijaya.shah@stud-uni-bamberg.de
license = MIT
url = https://github.com/bishwothakuri/adaptive-incentives-crowdsensing
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# Use the src/ layout
package_dir =
    = src
# Automatically find all packages under src
packages = find:
# Minimum Python version
python_requires = >=3.8
# Runtime dependencies
install_requires =
    geopandas
    shapely
    numpy
    click
    folium
    pandas

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    noise-sim = noise_sim.cli:cli

[bdist_wheel]
universal = 1
